# db-agent

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agent/: formatter.py  query_engine.py  scope_guard.py
app/api/: auth.py  chat.py  onboarding.py
app/auth/: dependencies.py  jwt.py  password.py
app/db/: factory.py
app/db/adapters/: _sql_base.py  base.py  mongodb.py  mysql.py  postgres.py  sqlite.py
app/models/: api.py  schema.py
app/onboarding/: introspector.py  schema_store.py
app/storage/: agent_store.py  pg.py  user_store.py
demo/: seed_pg.py
docs/: api.md  architecture.md  deployment.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AccessSettings.tsx  AgentCard.tsx  AppLogo.tsx  EditAgentModal.tsx  ResultTable.tsx  SchemaPanel.tsx  Stepper.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Chat.tsx  Home.tsx  Landing.tsx  Login.tsx  Signup.tsx
frontend/src/pages/onboard/: StepConnect.tsx  StepEnrich.tsx  StepFinalize.tsx  StepRelationships.tsx  StepSchema.tsx  index.tsx
tests/: conftest.py  test_adapters.py  test_agent.py  test_chat_api.py  test_introspector.py  test_onboarding_api.py
